--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Marcusfranco</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <base href="/">
+        <meta charset="utf-8"/>
+        <link rel="stylesheet" href="/assets/css/bootstrap.css"/>
+        <title>Marcus Franco</title>
+    </head>
+    <body>
+        <app-root></app-root>
+        <script src="/assets/js/jquery-3.5.1.js"></script>
+        <script src="/assets/js/aos.js"></script>
+        <script src="/assets/js/slick.js"></script>
+        <script src="/assets/js/main.js"></script>
+    </body>
 </html>
