--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html lang="en-US">
     <head>
         <base href="/">
-        <meta charset="utf-8"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="description" content="I'm a web developer, computer programmer, and student studying cognitive science with specialization in machine learning and neural computation.">
+        <meta name="keywords" content="web developer computer science cognitive programmer programming develop design ui ux machine learning ai artificial intelligence neural computation bootstrap angular javscript html css application app ">
         <link rel="stylesheet" href="/assets/css/bootstrap.css"/>
-        <title>Marcus Franco</title>
+        <title>Marcus Franco - Student, Programmer, Web Developer</title>
     </head>
     <body>
         <app-root></app-root>
+
         <script src="/assets/js/jquery-3.5.1.js"></script>
+        <script src="/assets/js/bootstrap.js"></script>
         <script src="/assets/js/aos.js"></script>
         <script src="/assets/js/slick.js"></script>
         <script src="/assets/js/main.js"></script>
